Fixed layout problem on Firefox.

--- a/css/style.sass
+++ b/css/style.sass
@@ -272,7 +272,7 @@ div#lobbyMessageArea
   overflow-y: scroll
   border: 1px solid #ccc
   word-wrap: break-word
-  flex: 1
+  flex: 1 1 1px
 
 div#worldClocks
   height: 50px
@@ -413,7 +413,7 @@ div#boardMessageArea
   overflow-y: scroll
   border: 1px solid #ccc
   word-wrap: break-word
-  flex: 1
+  flex: 1 1 1px
 
 div#watcherBox
   width: 210px
